[tool.poetry]
name = "py-web-13"
version = "0.1.0"
description = ""
authors = ["checkmateLL <saoirse.girl47@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
email-validator = "^2.2.0"
cloudinary = "^1.41.0"
pydantic-settings = "^2.6.1"
redis = {extras = ["asyncio"], version = "^5.2.0"}
fastapi-mail = "^1.4.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.2.1"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
